--- a/simon.facebookapp/pom.xml
+++ b/simon.facebookapp/pom.xml
@@ -46,6 +46,22 @@
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
+        		<plugin>
+    		<!-- Specify the MAIN class for the executable JAR file -->
+			<groupId>org.apache.maven.plugins</groupId>
+      		<artifactId>maven-jar-plugin</artifactId>
+          	<version>3.1.0</version>
+      		<configuration>
+        		<archive>
+          			<manifest>
+                		<addClasspath>true</addClasspath>
+                		<classpathPrefix>lib/</classpathPrefix>
+                		<mainClass>com.arcada.devops.simon.facebookapp.App</mainClass>
+          			</manifest>
+        		</archive>
+      		</configuration>
+		</plugin>
+
         <plugin>
           <artifactId>maven-clean-plugin</artifactId>
           <version>3.4.0</version>
